@@ -103,6 +103,14 @@ describe "halt plugin" do
 
   it "should raise an error for single argument not integer, String, or Array" do
     app(:halt) do |r|
+      r.halt nil
+    end
+
+    proc{req}.must_raise(Roda::RodaError)
+  end
+
+  deprecated "should raise an error for single argument not integer, String, or Array" do
+    app(:halt) do |r|
       r.halt('a'=>'b')
     end
 
